edits from Heckman 5/3

--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -37,8 +37,7 @@ Anna L. Ziff \\
 Center for the Economics of \\
 Human Development \\
 The University of Chicago}
-\date{First Draft: January 5, 2016\\ This Draft: \today \\ \textbf{[JJH: Explain rank test and why different from proportion.]}
-}
+\date{First Draft: January 5, 2016\\ This Draft: \today \\}
 
 \maketitle
 \restoregeometry
@@ -73,6 +72,8 @@ Phone: 773-834-0029                                    &  \\
 Email: aziff@uchicago.edu                     &  \\
 
 \end{tabular}
+
+\textbf{[JJH: (1) Please align the appendices and text (make sure references are correct); (2) App C \& E seem to cover same stuff. Please be careful; (3) Internal vs external locus of control.]}
 
 \clearpage
 
