--- a/output/abccare-gendergaps-summarizingtable.tex
+++ b/output/abccare-gendergaps-summarizingtable.tex
@@ -2,21 +2,21 @@
 \toprule
 & (1) & (2) & (3) & (4) \\
 Category & Control Group  &  Control Group &  Control Group &  Treatment \\
-	&				&	Stay at Home		& Alternative Preschool &  Group \\
-\midrule  
+	&				&	Stay at Home		& in Low Quality Childcare &  Group \\
+\midrule
 IQ 								& \checkmark 	&  \checkmark* 		& $\times$	& \checkmark \\
 Achievement						& \checkmark* 	&  \checkmark* 		&$\times$		& $\times$* \\
-Social-emotional					& $\times$	& \checkmark 		&$\times$* 	&$\times$ \\
+Social-emotional					& $\times$	& \checkmark 		&$\times$* 	&$\times$* \\
 Parenting							& \checkmark	&  \checkmark* 		&$\times$ 	& $\times$ \\
 Parental income					&  \checkmark  &\checkmark* 		& $\times$  	& \checkmark \\
-Education							& \checkmark 	&\checkmark 		& $\times$ 	&	$\times$* \\
+Education							& \checkmark 	&\checkmark* 		& $\times$ 	&	$\times$* \\
 Employment						&  \checkmark* &  \checkmark* 		& $=$ 		&\checkmark* \\
 Crime							&  $\times$* 	&  $=$ 			& $\times$* 	&  $\times$* \\
 Risky Behavior						& $\times$	& $\times$*		& \checkmark	& $\times$* \\
-Health 							& $=$ 		& $\times$ 		& $\times$ 	&  \checkmark *\\
+Health 							& \checkmark 		& $\times$ 		& $=$ 	&  \checkmark \\
 Mental Health						& \checkmark* & \checkmark* 		&	\checkmark &	\checkmark \\
 
 \midrule
 All								&  \checkmark &\checkmark*&  $\times$ & $\times$\\
 \bottomrule
-\end{tabular}
+\end{tabular} 
