--- a/preambleappendix.tex
+++ b/preambleappendix.tex
@@ -40,6 +40,7 @@
 \usepackage{setspace}
 \usepackage{enumerate}
 \usepackage{rotating}
+\usepackage{tocloft}
 \usepackage{epstopdf}
 \usepackage[titletoc]{appendix}
 \usepackage{framed}
