--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -34,11 +34,11 @@ It is also useful to assess the average effectiveness of a program relative to a
 \bm{\Delta}_a \left( V =1 \right) : =   \mathbb{E} \left[ \bm{Y}^1_a - \bm{Y}^0_a | V = 1, W = 1 \right] := \mathbb{E} \left[\bm{Y}^1_a - \bm{Y}^0_{a,C} | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We primarily rely on matching (conditions on observables) to control for selection into home or low quality preschool by the control group. We report results from alternative strategies in Appendix~\ref{}. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.
+Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We primarily rely on matching (conditions on observables) to control for selection into home or low quality preschool by the control group. We report results from alternative strategies in Appendix~\ref{appendix:vsensitivity}. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.
 
 \subsection{Summarizing Multiple Treatment Effects}\label{sec:combining-functions}
 
-ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in our benefit/cost analysis which we summarize in this section (\citealp{Lehman_Romano_2005_AnnStat} and \citealp{Romano_Shaikh_2006_AnnStat}). We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To do this, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. In another paper (\citealp{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}), we monetize outcomes by computing rates of return and cost/benefit rates. This requires making an additional layer of assumptions, which we avoid in this paper.
+ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in our benefit/cost analysis which we summarize in this section (\citealp{Lehman_Romano_2005_AnnStat} and \citealp{Romano_Shaikh_2006_AnnStat}). We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To construct these, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. In another paper (\citealp{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}), we monetize outcomes by computing rates of return and cost/benefit rates. This requires making an additional layer of assumptions to extrapolate lifetime benefit, which we avoid making in this paper.
 
 Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
 \begin{equation}
