--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -1,10 +1,10 @@
-This section reports estimates of treatment effects for the main outcomes by gender, tests of equality of effects by outcome, and the estimated combining functions. These estimates show that the program treatment effects are strong for both males and females are that treatment effects depend on the counterfactual against which they are benchmarked (home or low quality center care). Treatment effects sharply differ by gender.
+This section reports estimates of treatment effects for the main outcomes by gender, tests of equality of effects by gender by outcome, and combining functions. These estimates show that the program treatment effects are strong for both males and females. Treatment effects depend on the counterfactual against which they are benchmarked (home or low quality center care). Treatment effects sharply differ by gender.\footnote{See Appendix~\ref{appendix:bootstrap} for the exact procedure we use to conduct inference.}
 
 \subsection{Estimated Treatment Effects}
 
-Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of a representative selection of the main treatment effects for males and females respectively. The full list of treatment effects is reported in Web Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who did not attend alternative preschools. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}. mean differences between the full treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
+Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of a representative selection of treatment effects for males and females respectively. The full list of treatment effects is reported in Web Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who stay at home. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}: mean differences between the treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
 
-The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on the estimate that we consider; college graduation increases 13 percentage points; and the average years of schooling increase between 2.1 and 1.8 years. Employment at age 30 increases between 13 and 8 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment with the option of staying at home.
+The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on the estimate that we consider; college graduation increases 13 percentage points; and the average years of schooling increase between 2.1 and 1.8 years. Employment at age 30 increases between 13 and 8 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment outcome with outcomes for those who remain at home.
 
 \begin{sidewaystable}[!htbp]
 \centering
@@ -22,7 +22,6 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \doublespacing
 
 \begin{sidewaystable}[!htbp]
-\textbf{[JJH: Why these?][See above, we thought these were illustrative.]}
 \centering
 \begin{threeparttable}
 \caption{Treatment Effects on Selected Outcomes, Females$^*$}\label{table:tescombinedfemales}
@@ -40,14 +39,14 @@ $^*$For females, we do not report graduation from a four-years college because w
 
 The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are also substantial. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between 19 and 24 thousand of 2014 USD after treatment. The effects strengthen when comparing treatment to low quality childcare. Separation from the mother and being placed in relatively low quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} and the analysis of \citet{golding2016psychology}.}
 
-The results hold when using other definitions of control substitution, which vary by exposure length (see Appendix~\ref{appendix:vsensitivity}). They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared with alternative childcare arrangements. The education results remain statistically significant for females, when compared to the full control group and when fixing to staying at home.
+The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared with alternative center-based childcare arrangements. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
 
-The estimates the effects for females and males in Columns (3) and (5) in their respective tables are not based on adjustments for covariates (matching); the estimates in (4) and (6) are. The matching estimates are adjusted by baseline characteristics. In Appendix~\ref{appendix:bvariables}, we explain our choice of matching variables. We make a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
+The estimated effects for females and males in Columns (3) and (5) in their respective tables are not based on adjustments for baseline covariates (matching); the estimates in (4) and (6) are. In Appendix~\ref{appendix:bvariables}, we justify our choice of matching variables. We conduct a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
-Finally, we test whether estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports differences between males and females in the control groups and treatment groups across major outcomes. The general pattern is that male results are stronger than female results in the control group. The pattern is generally reversed in the treatment group. Using the Wilcoxon signed-rank test, we reject equality of the distributions under the treatment and control. \textbf{[JJH: Please describe the details of the test -- This was applied to the means? How to adjust for dependence? Not clear.]} A similar result emerges when we use a more complete set of outcomes. See Appendix~\ref{appendix:genderdifferences}.
+Finally, we test whether estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports differences between males and females in the control groups and treatment groups across major outcomes within each category there are multiple measures. Using the Wilcoxon signed-rank test, we reject equality of the distributions under the treatment and control.\footnote{The procedure for this test is fully listed in Appendix~\ref{little-gdiff-tes}. In summary, we bootstrap with replacement 1,000 times. For bootstrap $b \in [1, \ldots, 1,000]$ we compute the treatment effect for males, $T_{M,b}$, and females, $T_{F,b}$. These treatment effects represent a pair $(T_{M,b}, T_{F,b})$. Over the distribution of these pairs, we compute the signed-rank test, which compares the empirical distribution of the treatment effects for males to the empirical distribution of the treatment effects for females. We repeat this procedure for each outcome.} The general pattern is that male results are stronger than female results in the control group. The pattern is generally reversed in the treatment group. Similar results emerge when we use a more complete set of outcomes. See Appendix~\ref{appendix:genderdifferences}.
 
 \begin{sidewaystable}[!htbp]
-\textbf{[JJH: Describe the test -- It was on means by category? How to control for dependence? Please supply details. Give formula.]}
+\textbf{[JJH: Describe the test -- It was on means by category? How to control for dependence? Please supply details. Give formula.][We explain it in Appendix~\ref{little-gdiff-tes}. It compares the empirical bootstrap distributions of the treatment effects between genders. We are implementing step-down. It is running.]}
 \centering
 \begin{threeparttable}
 \caption{Gender Differences of Treatment Effects}\label{table:genderdifference-tes}
@@ -63,19 +62,21 @@ Note: This table reproduces the control-group means and estimated treatment effe
 
 \subsection{Estimated Combining Functions}
 
-We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Measures of cognitive, social-emotional, and parenting skills were collected during the intervention and while the subjects were in school. The researchers collected information on the subjects' academic performance including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
+We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Measures of cognitive, social-emotional, and parenting skills were collected during the intervention or while the subjects were in school. The researchers collected information on the subjects' academic performance including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
 
-Given the large number of available variables from the numerous follow-ups, summarizing all treatment effects can overwhelm the reader. In a companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregate the treatment effects by conducting cost/benefit and rate of return analyses. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males. We adjust for dependence across outcomes and for pretesting in constructing standard errors.
+Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregates the treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. 
 
-We find strong evidence of gender differences in education and employment. For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when comparing to staying at home. Treatment advantage for males is only seen when compared to those males who attended alternative preschool, with none of the education or employment outcomes being significant and positive when compared to staying at home.
+In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males. We adjust for dependence across outcomes and for pretesting in constructing standard errors. \textbf{[JJH: Which appendix shows this?]}
 
-We test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:ppositive} shows, although the proportions for both genders are statistically significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males fixing the control group to alternate childcare, but are stronger for females when fixing the control group to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
+We find strong evidence of gender differences in education and employment. For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when compared to staying at home. Treatment advantage for males is only seen when compared to those males who attended alternative preschool. None of the education or employment outcomes are statistically significant and positive when compared to staying at home.
+
+We test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:ppositive} shows, although the proportions for both genders are statistically significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and statistically significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males when comparing treatment to alternate childcare, but are stronger for females when comparing treatment to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
 
 We next report estimates of the proportion of beneficial effects by outcome category and overall. The analysis is based on treatment effect \eqref{eq:effect}. Figure~\ref{fig:ppositive} displays the results from this analysis: ABC/CARE positively impacted a large percentage of the outcomes. We show the counts for treatment compared to the next best alternative chosen by parents in Figure~\ref{fig:ppositivenb}. Proportionately more outcomes are beneficial for females, but the proportions are high for both groups and well above the benchmark of 1/2. In Tables~\ref{table:abccare_rslt_pooled_counts} to \ref{table:abccare_rslt_female_counts_n10a10} of Appendix~\ref{appendix:results}, we document a large and precisely determined fraction of beneficial treatment effects well above 1/2 for both genders for categories of outcomes spanning the life cycle through the mid 30's.
 
 Using an $\alpha$-level of significance, one would expect to find by chance that $\alpha\%$ of the treatment effects are ``statistically significant,'' even if the null hypothesis of no effect of the program is true. At a 10\% level of significance, $46\%$ are statistically significant for females and $28\%$ for males (see Figure~\ref{fig:ppositive10}).
 
-Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust the count in Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative preschool. These comparisons indicate that males and females benefit differently from alternatives to high quality treatment. Compared across all categories, females benefit more from treatment when compared to staying at home (as opposed to attending alternative preschools), while males benefit more from treatment when compared to attending an alternative childcare arrangement (as opposed to staying at home).
+Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust the count measures used to construct in Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to an alternative childcare center. These comparisons indicate that males and females benefit differently from alternatives to high quality treatment. Compared across all categories, females benefit more from treatment when compared to staying at home (as opposed to attending alternative childcare), while males benefit more from treatment when compared to attending an alternative childcare arrangement (as opposed to staying at home).
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -121,6 +122,6 @@ Finally, we present the estimates of the combining functions by outcome category
 		\includegraphics[width=\textwidth]{output/epan_ipw_p1_cats1_sig10.eps}
 \end{subfigure}
 \scriptsize \justify
-Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
+Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count. Standard errors with no bar indicate that the proportion is 0. \\
 \end{figure}
 
